[project]
name = "what-the-feed"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.12",
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "pydantic>=2.11.3",
    "pydantic-settings>=2.9.1",
    "python-dotenv>=1.1.0",
    "sqlalchemy>=2.0.40",
    "starlette>=0.46.2",
    "typing-extensions>=4.13.2",
    "uvicorn>=0.34.2",
]

[dependency-groups]
dev = [
    "alembic>=1.15.2",
    "black>=25.1.0",
    "flake8>=7.2.0",
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
]

[tool.black]
line-length = 79
